--- a/docs/integrations/prefect-sqlalchemy/index.mdx
+++ b/docs/integrations/prefect-sqlalchemy/index.mdx
@@ -27,7 +27,7 @@ prefect block register -m prefect_sqlalchemy
 
 ### Save credentials to a block
 
-To use the `load` method on Blocks, you must have a block [saved through code](https://docs.prefect.io/develop/connect-third-party/#saving-blocks) or saved through the UI.
+To use the `load` method on Blocks, you must have a block saved through code or saved through the UI.
 
 
 ```python
