Clarify that you're using Prefect to convert a Python script to a workflow

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -10,7 +10,7 @@ In this quickstart, you'll schedule your code on remote infrastructure and obser
 
 ## Example
 
-In this quickstart, you will convert the following Python script to a schedulable, observable, resilient, and deployable workflow.
+In this quickstart, you will use Prefect to convert the following Python script to a schedulable, observable, resilient, and deployable workflow.
 
 ```python
 import httpx
