Show how to spin up a local Prefect server using the CLI

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -55,12 +55,11 @@ Your CLI is now authenticated with your Prefect Cloud account through a locally-
 If you have any issues with browser-based authentication, see the [Prefect Cloud docs](/3.0rc/cloud/manage-users/api-keys/) to learn how to authenticate with a manually created API key.
   </Tab>
   <Tab title="OSS">
-TBD
+Spin up a local Prefect server:
 
-<Note>
-If you would like to run a Prefect server instance on your own infrastructure, see the [Host a Prefect server instance](/3.0rc/cloud/self-host/) docs.
-Note that you need to both host your own server and run flows on your own infrastructure.
-</Note>
+```bash
+prefect server start
+```
   </Tab>
 </Tabs>
 
