fix broken links

--- a/docs/integrations/prefect-gcp/index.mdx
+++ b/docs/integrations/prefect-gcp/index.mdx
@@ -173,14 +173,14 @@ if __name__ == "__main__":
 <Info> 
 **Upload and download directories**
 
-`GcsBucket` supports uploading and downloading entire directories. To view examples, check out the [Examples Catalog](examples_catalog/#cloud-storage-module)!
+`GcsBucket` supports uploading and downloading entire directories.
 </Info>
 
 ## Save secrets with Google Secret Manager
 
 Read and write secrets with Google Secret Manager.
 
-Be sure to [install](#installation) `prefect-gcp` with the Secret Manager extra.
+Be sure to [install](#instal-prefect-gcp) `prefect-gcp` with the Secret Manager extra.
 
 The code below writes a secret to the Secret Manager, reads the secret data, and deletes the secret.
 
