--- a/docs/integrations/prefect-azure/index.mdx
+++ b/docs/integrations/prefect-azure/index.mdx
@@ -80,7 +80,7 @@ custom_blob_storage_download_flow = example_blob_storage_download_flow.with_opti
 
 Run flows on [Azure Container Instances (ACI)](https://learn.microsoft.com/en-us/azure/container-instances/) to dynamically scale your infrastructure.
 
-See the [Azure Container Instances Worker Guide](/3.0rc/aci_worker/) for a walkthrough of using ACI in a hybrid work pool.
+See the [Azure Container Instances Worker Guide](/3.0rc/integrations/prefect-azure/aci_worker/) for a walkthrough of using ACI in a hybrid work pool.
 
 If you're using Prefect Cloud, [ACI push work pools](/3.0rc/deploy/dynamic-infra/push-runs-serverless/#__tabbed_1_2) provide all the benefits of ACI with a quick setup and no worker needed.
 
