--- a/docs/integrations/prefect-dbt/index.mdx
+++ b/docs/integrations/prefect-dbt/index.mdx
@@ -188,14 +188,14 @@ DbtCloudJob.load("JOB-BLOCK-NAME-PLACEHOLDER")
 
 **Available `TargetConfigs` blocks**
 
-Visit the [API Reference](cli/configs/base) to see other built-in `TargetConfigs` blocks.
+Visit the SDK reference in the side navigation to see other built-in `TargetConfigs` blocks.
 
-If the desired service profile is not available, check out the [Examples Catalog](examples_catalog/#clicredentials-module) to see how you can  build one from the generic `TargetConfigs` class.
+If the desired service profile is not available, you can build one from the generic `TargetConfigs` class.
 </Info>
 
 To create dbt Core target config and profile blocks for BigQuery:
 
-1. Save and load a [`GcpCredentials` block](https://prefecthq.github.io/prefect-gcp/#saving-credentials-to-a-block).
+1. Save and load a `GcpCredentials` block.
 2. Determine the schema / dataset you want to use in BigQuery.
 3. Create a short script, replacing the placeholders.
 
