Get rid of passive voice

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -165,7 +165,7 @@ Create a Docker type work pool:
 prefect work-pool create --type docker my-work-pool
 ```
 
-Verify that the work pool was created:
+Verify that the work pool exists:
 
 ```bash
 prefect work-pool ls
