--- a/docs/3.0rc/develop/connect-third-party.mdx
+++ b/docs/3.0rc/develop/connect-third-party.mdx
@@ -66,7 +66,7 @@ You can create and use these block types through the UI and without installing a
 The `S3`, `Azure`, `GCS`, and `GitHub` blocks are deprecated in favor of the the corresponding `S3Bucket`, 
 `AzureBlobStorageCredentials`, `GCSBucket`, and `GitHubRepository` blocks found in the 
 [Prefect integration libraries](/3.0rc/integrations/).
-The JSON, DateTime, and String blocks are deprecated in favor of [Variables](/3.0rc/concepts/variables/).
+The JSON, DateTime, and String blocks are deprecated in favor of [Variables](/3.0rc/develop/write-flows/variables/).
 </Warning>
 
 ## Blocks in Prefect integration libraries
@@ -156,7 +156,7 @@ new_bucket_block.save(name="my-new-data-bucket-block")
 ```
 
 <Tip>
-You can also create and update blocks through the [Prefect UI](/3.0rc/cloud/blocks/).
+You can also create and update blocks through the [Prefect UI](/3.0rc/manage/cloud/blocks/).
 </Tip>
 
 ### Load blocks
