--- a/docs/3.0rc/get-started/install.mdx
+++ b/docs/3.0rc/get-started/install.mdx
@@ -6,8 +6,8 @@ Prefect is published as a Python package, which requires Python 3.9 or newer. We
 
 You also need an API server, either
 
-* [Prefect Cloud](/3.0rc/cloud/), a managed solution that provides strong scaling, performance, and security (view [pricing](https://www.prefect.io/pricing)), or
-* Your own hosted [Prefect server instance](/3.0rc/cloud/self-host/)
+* [Prefect Cloud](/3.0rc/manage/cloud/), a managed solution that provides strong scaling, performance, and security (view [pricing](https://www.prefect.io/pricing)), or
+* Your own hosted [Prefect server instance](/3.0rc/manage/self-host/)
 
 ## Install with pip
 
