--- a/docs/3.0rc/manage/cloud/troubleshoot-cloud.mdx
+++ b/docs/3.0rc/manage/cloud/troubleshoot-cloud.mdx
@@ -175,13 +175,13 @@ curl -s -H "Authorization: Bearer $PREFECT_API_KEY" "https://api.prefect.cloud/a
 <Note>
 **Users vs Service Accounts**
 
-[Service accounts](/3.0rc/cloud/manage-users/service-accounts/) (sometimes referred to as bots),  
+[Service accounts](/3.0rc/manage/cloud/manage-users/service-accounts/) (sometimes referred to as bots),  
 represent non-human actors that interact with Prefect such as workers and CI/CD systems. 
 Each human that interacts with Prefect should be represented as a user. 
 User API keys start with `pnu_` and service account API keys start with `pnb_`.
 </Note>
 
-Actors can be members of [workspaces](/3.0rc/cloud/workspaces/). An actor attempting an action in a 
+Actors can be members of [workspaces](/3.0rc/manage/cloud/workspaces/). An actor attempting an action in a 
 workspace they are not a member of results in a 404 response. Use the following command to check your actor's workspace memberships:
 
 ```bash
@@ -196,7 +196,7 @@ Append the following to the end of the command above to make the output more rea
 </Note>
 
 Make sure your actor is a member of the workspace you are working in. Within a workspace, 
-an actor has a [role](/3.0rc/cloud/manage-users/manage-roles/) which grants them certain permissions. 
+an actor has a [role](/3.0rc/manage/cloud/manage-users/manage-roles/) which grants them certain permissions. 
 Insufficient permissions result in an error. For example, starting a worker with the **Viewer** role results in errors.
 
 ## Execution
