Remove a 'can' to more strongly encourage people to view the work pool they created

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -150,7 +150,7 @@ Create a [managed work pool](/3.0rc/deploy/serve-flows/index):
 prefect work-pool create my-work-pool --type prefect:managed
 ```
 
-You can view your new work pool on the **Work Pools** page of the UI.
+View your new work pool on the **Work Pools** page of the UI.
   </Tab>
   <Tab title="OSS">
 In this example, we'll create a Docker type work pool, but you can choose from other [work pool types](https://docs.prefect.io/concepts/work-pools/#worker-types).
