Improve the definition of a deployment

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -175,7 +175,7 @@ prefect work-pool ls
 
 ## Deploy and schedule your flow
 
-A [deployment](/3.0rc/deploy/serve-flows/) schedules a flow function to run in your work pool.
+A [deployment](/3.0rc/deploy/serve-flows/) is used to determine when, where, and how a flow function should run.
 Deployments elevate flows to remotely configurable entities that have their own API.
 
 This next script builds a deployment, identifying:
