Rename the initial section to 'Overview' to be clear that this is about setting expectations

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -8,7 +8,7 @@ Take a Python script to a production-ready, remotely executable workflow in minu
 
 In this quickstart, you'll schedule your code on remote infrastructure and observe the state of your workflows.
 
-## Example
+## Overview
 
 In this quickstart, you will use Prefect to convert the following Python script to a schedulable, observable, resilient, and deployable workflow.
 
