Make it clear that the API options are between using Cloud and a local server

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -34,7 +34,7 @@ pip install -U prefect==3.0.0rc2"
 
 ## Connect to Prefect's API
 
-Connect to the Prefect API with Cloud or OSS:
+Connect to the Prefect API on Cloud or spin up a local API server:
 
 <Tabs>
   <Tab title="Cloud">
@@ -51,7 +51,7 @@ Your CLI is now authenticated with your Prefect Cloud account through a locally-
 If you have any issues with browser-based authentication, see the [Prefect Cloud docs](/3.0rc/manage/cloud/manage-users/api-keys/) to learn how to authenticate with a manually created API key.
   </Tab>
   <Tab title="OSS">
-Spin up a local Prefect server:
+Use the Prefect CLI to start a local server:
 
 ```bash
 prefect server start
