Remove redundant 'prefect cloud login' command

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -39,7 +39,7 @@ Connect to the Prefect API on Cloud or spin up a local API server:
 <Tabs>
   <Tab title="Cloud">
 1. Head to [https://app.prefect.cloud/](https://app.prefect.cloud/) and sign in or create a forever-free Prefect Cloud account.
-1. Use the `prefect cloud login` CLI command to log in to Prefect Cloud from your development environment.
+1. Log in to Prefect Cloud from your development environment.
 
 ```bash
 prefect cloud login
