Properly indent the cloud login code block

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -41,11 +41,12 @@ Connect to the Prefect API on Cloud or spin up a local API server:
 1. Head to [https://app.prefect.cloud/](https://app.prefect.cloud/) and sign in or create a forever-free Prefect Cloud account.
 1. Log in to Prefect Cloud from your development environment.
 
-```bash
-prefect cloud login
-```
+   ```bash
+   prefect cloud login
+   ```
 
-Choose **Log in with a web browser** and click the **Authorize** button in the browser window that opens.
+1. Choose **Log in with a web browser** and click the **Authorize** button in the browser window that opens.
+
 Your CLI is now authenticated with your Prefect Cloud account through a locally-stored API key that expires in 30 days.
 
 If you have any issues with browser-based authentication, see the [Prefect Cloud docs](/3.0rc/manage/cloud/manage-users/api-keys/) to learn how to authenticate with a manually created API key.
