--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -62,7 +62,7 @@ prefect server start
 
 ## Convert your script to a Prefect flow
 
-The easiest way convert a Python script into a workflow is to add a `@flow` decorator.
+The easiest way to convert a Python script into a workflow is to add a `@flow` decorator.
 [Flows](/3.0rc/develop/write-flows/) are the core observable, deployable units in Prefect and are the primary entrypoint to orchestrated work.
 
 The following flow calls two tasks, each defined by the `@task` decorator.
