Show how to open the Prefect UI for OSS

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -52,11 +52,13 @@ Your CLI is now authenticated with your Prefect Cloud account through a locally-
 If you have any issues with browser-based authentication, see the [Prefect Cloud docs](/3.0rc/manage/cloud/manage-users/api-keys/) to learn how to authenticate with a manually created API key.
   </Tab>
   <Tab title="OSS">
-Use the Prefect CLI to start a local server:
+1. Use the Prefect CLI to start a local server:
 
-```bash
-prefect server start
-```
+   ```bash
+   prefect server start
+   ```
+
+1. Open the Prefect UI in your browser at [http://localhost:4200](http://localhost:4200).
   </Tab>
 </Tabs>
 
