--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -180,67 +180,60 @@ You can also choose from other [work pool types](https://docs.prefect.io/concept
 A [deployment](/3.0rc/deploy/serve-flows/) is used to determine when, where, and how a flow function should run.
 Deployments elevate flows to remotely configurable entities that have their own API.
 
-This next script builds a deployment, identifying:
+1. Create a deployment script:
 
-- Source for the code to deploy (here, a GitHub repo)
-- Specific flow to run (`my_gh_workflow.py:repo_info`)
-- Work pool target (`my-work-pool`)
-- Cron schedule (1am every day)
+   ```bash create_deployment.py
+   from prefect import flow
 
-```bash create_deployment.py
-from prefect import flow
+   # Source for the code to deploy (here, a GitHub repo)
+   SOURCE_REPO="https://github.com/prefecthq/demos.git"
 
-# The repository to query
-SOURCE_REPO="https://github.com/prefecthq/demos.git"
+   if __name__ == "__main__":
+       flow.from_source(
+           source=SOURCE_REPO,
+           entrypoint="my_gh_workflow.py:repo_info", # Specific flow to run
+       ).deploy(
+           name="my-first-deployment",
+           work_pool_name="my-work-pool", # Work pool target
+           cron="0 1 * * *", # Cron schedule (1am every day)
+       )
+   ```
 
-if __name__ == "__main__":
-    flow.from_source(
-        source=SOURCE_REPO,
-        entrypoint="my_gh_workflow.py:repo_info",
-    ).deploy(
-        name="my-first-deployment",
-        work_pool_name="my-work-pool",
-        cron="0 1 * * *",
-    )
-```
+   <Tip>
+   You can store your flow code in nearly any location as long as Prefect can access it.
+   See [Where to store your flow code](/3.0rc/deploy/dynamic-infra/retrieve-flow-code) for more details.
+   </Tip>
 
-<Tip>
-You can store your flow code in nearly any location as long as Prefect can access it.
-See [Where to store your flow code](/3.0rc/deploy/dynamic-infra/retrieve-flow-code) for more details.
-</Tip>
+1. Run the script to create the deployment:
 
-Run the script to create the deployment.
+   ```bash
+   python create_deployment.py
+   ```
 
-```bash
-python create_deployment.py
-```
+   Check the logs to ensure your deployment was created:
 
-You see a message that your deployment was created:
+   ```bash
+   Successfully created/updated all deployments!
+   ______________________________________________________
+   |                    Deployments                     |  
+   ______________________________________________________
+   |    Name                       |  Status  | Details |
+   ______________________________________________________
+   | repo-info/my-first-deployment | applied  |         |
+   ______________________________________________________
+   ```
 
-```bash
-Successfully created/updated all deployments!
-______________________________________________________
-|                    Deployments                     |  
-______________________________________________________
-|    Name                       |  Status  | Details |
-______________________________________________________
-| repo-info/my-first-deployment | applied  |         |
-______________________________________________________
-```
+1. Schedule a run for the deployment:
 
-To schedule a run for the deployment:
+   ```bash
+   prefect deployment run 'repo-info/my-first-deployment'
+   ```
 
-```bash
-prefect deployment run 'repo-info/my-first-deployment'
-```
+   After a minute or so, you should see the flow run graph and logs on the Flow Run page in the UI.
 
-After a minute or so, you should see the flow run graph and logs on the Flow Run page in the UI.
+   ![Flow run graph and logs](/3.0rc/img/ui/qs-flow-run.png)
 
-![Flow run graph and logs](/3.0rc/img/ui/qs-flow-run.png)
-
-<Warning>
-    After testing this process, click the **Remove** button in the top right of the **Deployment** page so that the workflow is no longer scheduled to run once per day.
-</Warning>
+1. When you're done, click the **Remove** button in the top right of the **Deployment** page to stop further scheduled runs.
 
 ## Next steps
 
