Remove trailing quote from 'pip install' command

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -29,7 +29,7 @@ Install the Prefect client.
 If needed, see [Install Prefect](/3.0rc/get-started/install/) for other options.
 
 ```bash
-pip install -U prefect==3.0.0rc2"
+pip install -U prefect==3.0.0rc2
 ```
 
 ## Connect to Prefect's API
