Fix the bad name of the 'Remove' button on the Deployments page

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -233,7 +233,7 @@ Deployments elevate flows to remotely configurable entities that have their own 
 
    ![Flow run graph and logs](/3.0rc/img/ui/qs-flow-run.png)
 
-1. When you're done, click the **Remove** button in the top right of the **Deployment** page to stop further scheduled runs.
+1. When you're done, click the **More** > **Delete** button on the **Deployments** page to stop further scheduled runs.
 
 ## Next steps
 
