Rename 'UI' to 'dashboard' to be more specific

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -58,7 +58,7 @@ If you have any issues with browser-based authentication, see the [Prefect Cloud
    prefect server start
    ```
 
-1. Open the Prefect UI in your browser at [http://localhost:4200](http://localhost:4200).
+1. Open the Prefect dashboard in your browser at [http://localhost:4200](http://localhost:4200).
   </Tab>
 </Tabs>
 
