--- a/docs/3.0rc/develop/control-workflows/pause-cancel-flows.mdx
+++ b/docs/3.0rc/develop/control-workflows/pause-cancel-flows.mdx
@@ -153,10 +153,10 @@ resume_flow_run(FLOW_RUN_ID)
 ```
 <Note>
 
-**You can't suspend subflows independently of their parent run**
+**You can't suspend nested flows independently of their parent run**
 
 If you use a flow to schedule a flow run with `run_deployment`, the
-scheduled flow run is linked to the calling flow as a subflow run by
+scheduled flow run is linked to the calling flow as a nested flow run by
 default. This means you can't suspend the scheduled flow run
 independently of the calling flow.
 
@@ -229,8 +229,8 @@ If the run does not terminate after a grace period (default of 30 seconds), the 
 Flow run cancellation requires that the flow run is associated with a deployment.
 A monitoring process must be running to enforce the cancellation.
 
-Inline subflow runs (those created without `run_deployment`), cannot be cancelled without cancelling the parent flow run.
-To cancel a subflow run independent of its parent flow run, we recommend deploying it separately 
+Inline nested flow runs (those created without `run_deployment`), cannot be cancelled without cancelling the parent flow run.
+To cancel a nested flow run independent of its parent flow run, we recommend deploying it separately 
 and starting it using the [run_deployment](/3.0rc/api-ref/prefect/deployments/deployments/#prefect.deployments.deployments.run_deployment) 
 function.
 </Warning>
