--- a/docs/3.0rc/develop/write-tasks/use-task-runners.mdx
+++ b/docs/3.0rc/develop/write-tasks/use-task-runners.mdx
@@ -127,12 +127,12 @@ glass_tower()
 ## Use multiple task runners
 
 Each flow can only have a single task runner, but sometimes you may want a subset of your tasks to run 
-using a specific task runner. In this case, you can create [subflows](/3.0rc/develop/write-flows/#composing-flows) 
+using a specific task runner. In this case, you can create [nested flows](/3.0rc/develop/write-flows/#composing-flows) 
 for tasks that need to use a different task runner.
 
 For example, you can have a flow (in the example below called `multiple_runner_flow`) that runs its tasks locally 
 using the `ConcurrentTaskRunner`. If you have some tasks that can run more efficiently in parallel on a Dask cluster, 
-you can create a subflow (such as `dask_subflow`) to run those tasks using the `DaskTaskRunner`.
+you can create a nested flow (such as `dask_subflow`) to run those tasks using the `DaskTaskRunner`.
 
 ```python
 from prefect import flow, task
