--- a/docs/3.0rc/manage/cloud/rate-limits.mdx
+++ b/docs/3.0rc/manage/cloud/rate-limits.mdx
@@ -38,6 +38,6 @@ The retention period is the number of days that metadata is available after it i
 For flow and task runs, it is calculated from the time the run reaches a 
 [terminal state](/3.0rc/develop/observe-workflows/manage-states/#state-types). 
 Subflow runs are retained independently from their parent flow runs. They are removed based on 
-the time each subflow run reaches a terminal state.
+the time each nested flow run reaches a terminal state.
 
 If you have needs that require a custom retention period, [contact Prefect's sales team](https://www.prefect.io/pricing).
