--- a/docs/2.19.x/tutorial/tasks.mdx
+++ b/docs/2.19.x/tutorial/tasks.mdx
@@ -212,12 +212,12 @@ Average open issues per user 💌 : 2.27
 ```
 
 
-Subflows
+Nested flows
 ---------------------------------------
 
 Not only can you call tasks within a flow, but you can also call other flows! Child flows are called [nested flows](https://docs.prefect.io/concepts/flows/#composing-flows) and allow you to efficiently manage, track, and version common multi-task logic.
 
-Subflows are a great way to organize your workflows and offer more visibility within the UI.
+Nested flows are a great way to organize your workflows and offer more visibility within the UI.
 
 Let's add a `flow` decorator to our `get_open_issues` function:
 
