remove nearly 100 broken links

--- a/docs/3.0rc/resources/secrets.mdx
+++ b/docs/3.0rc/resources/secrets.mdx
@@ -178,7 +178,7 @@ The flow reads the Snowflake password from the AWS Secret Manager and uses it in
 The `SnowflakeConnector` block uses the nested `SnowflakeCredentials` block to connect to Snowflake.
 Again, neither of the Snowflake blocks are saved, so the credentials are not stored in Prefect Cloud.
 
-See [`prefect-snowflake`](/3.0rc/integrations/prefect-snowflake) for more examples of working with Snowflake.
+See [`prefect-snowflake`](/integrations/prefect-snowflake) for more examples of working with Snowflake.
 
 ## Next steps
 
