--- a/docs/3.0rc/manage/cloud/troubleshoot-cloud.mdx
+++ b/docs/3.0rc/manage/cloud/troubleshoot-cloud.mdx
@@ -129,7 +129,7 @@ Your worker is often an older version than your flow.
 <Note>
 **Integration Versions**
 
-[Integrations](/3.0rc/integrations/) are versioned and released independently of the core Prefect library. 
+[Integrations](/integrations/) are versioned and released independently of the core Prefect library. 
 They should be upgraded simultaneously with the core library, using the same method.
 </Note>
 
