--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -52,7 +52,7 @@ Your CLI is now authenticated with your Prefect Cloud account through a locally-
 If you have any issues with browser-based authentication, see the [Prefect Cloud docs](/3.0rc/manage/cloud/manage-users/api-keys/) to learn how to authenticate with a manually created API key.
   </Tab>
   <Tab title="OSS">
-1. Ensure your current profile hasn't logged into Prefect Cloud:
+1. Ensure your current profile isn't authenticated to Prefect Cloud:
 
    ```bash
    prefect cloud logout
